--- a/src/css/concated.sass
+++ b/src/css/concated.sass
@@ -1,3 +1,13 @@
+$font-stack: 14px/1.42em "OpenSans", Arial, sans-serif
+$large: 1300px
+$medium: 1260px
+$tablet: 1000px
+$mobile-large: 760px
+$mobile-medium: 640px
+$mobile-small: 480px
+$mobile-x-small: 320px
+$main-color: #6bb6ee
+
 @import animations
 @import fonts
 @import global
