--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1,10 +1,3 @@
-$large: 1300px
-$medium: 1260px
-$tablet: 1000px
-$mobile-large: 760px
-$mobile-medium: 630px
-$mobile-small: 480px
-$mobile-x-small: 320px
 
 .chromeperfectpixel-initial-block iframe,
 #chromeperfectpixel-supported-by
@@ -17,414 +10,81 @@ $mobile-x-small: 320px
 	// height: 0
 	// width: 0
 
-label
-	border-radius: 0
-
-.cross-top-fixed, .cross-bottom-fixed
-	cursor: pointer
+.container
 	display: block
-	opacity: .7
-	position: fixed
-	bottom: auto
-	left: auto
-	right: 0
-	top: 0
-	margin-top: 30px
-	margin-right: 30px
-	padding: 0
-	height: 24px
-	width: 24px
-	z-index: 20
-	&:after
-		background: url("../img/icons/cross-button-2.svg") no-repeat 50% 50%
-		background-size: 100%
-		content: ''
-		display: block
-		opacity: 0.6
-		height: 100%
-		width: 100%
-		transition: opacity .3s
-	&:hover:after
-		opacity: 1
-		transition: opacity .1s
-	&.animated
-		animation: crossIn 1s ease-in-out 1 forwards
 
-@media screen and (max-width: $mobile-large)
-	.cross-top-fixed, .cross-bottom-fixed
-		margin-top: 20px
-		margin-right: 20px
-		padding: 10px
-		height: 36px
-		width: 36px
-
-// --------------------------------------------------
-// LOGIC
-// --------------------------------------------------
-
-
-// --------------------------------------------------
-// INPUT
-// --------------------------------------------------
-input[type="text"], input[type="password"], input[type="email"]
-	-webkit-border-radius: 0
-	border-radius: 0
-	-webkit-box-shadow: none
-	-webkit-appearance: none
-	box-shadow: none
-	&.error
-		border-color: #ff8080 !important
-		&:hover
-			outline-color: #ff8080 !important
-		&:focus
-			outline-color: #35363c !important
-			& ~ .error
-				color: #35363c !important
-
-.input-group-1
-	margin-bottom: 30px
-	position: relative
-	label, .label
-		color: #35363c
-		display: block
-		font-family: 'Futura New'
+.menu
+	background-color: #36393d
+	color: #eee
+	font-size: 12px
+	a
+		color: white
+		// font-family: OpenSans;
 		font-size: 16px
-		font-weight: 300
-		line-height: 19px
-		margin-bottom: 12px
-	input[type="text"], input[type="password"], input[type="email"]
-		-webkit-appearance: none
-		border-radius: 0
-		border: 1px solid #636671
-		color: #35363c
-		display: block
-		font-family: 'Futura New'
-		font-size: 18px
-		font-weight: 300
-		height: 46px
-		line-height: 22px
-		outline: 2px solid transparent
-		outline-offset: -1px
-		padding-left: 19px
-		padding-right: 19px
-		width: 320px
-		&:focus
-			outline: 2px solid #35363c
-			transition: outline .1s
-	.error,
-	.error-label
-		pointer-events: none
-		color: #ff8080
-		font-family: 'Futura New'
-		font-size: 12px
-		font-weight: 200
-		line-height: 14px
-		height: 0
-		position: relative
-		top: 4px
-		opacity: 0
-		transform: translateY(10px)
-		transition: transform .3s, opacity .3s
-	&.error
-		input
-			border-color: #ff8080 !important
-			outline-color: #ff8080 !important
-		.error,
-		.error-label
-			display: block
-			opacity: 1
-			pointer-events: all
-			transform: translateY(0)
-			transition: transform .3s, opacity .3s
-
-.safari
-	.input-group-1
-		input[type="password"]
-			padding-right: 30px
-
-
-// --------------------------------------------------
-// TO-TOP
-// --------------------------------------------------
-
-#to-top
-	height: 70px
-	top: -100px
-	position: absolute
-	right: 0
-	cursor: pointer
-	transition: transform .3s, opacity .3s, bottom .3s
-	white-space: nowrap
-	width: 97px
-	transition: transform .3s, opacity .3s, bottom .3s
-	&:hover
-		opacity: 1
-		span
-			transform: translate3d(0,-28px,0)
-			color: #333
-			transition: color .1s, transform .3s
-		svg *
-			fill: #333333 !important
-			transition: fill .1s
-	img, span, svg
-		cursor: pointer
-		display: inline-block
-		vertical-align: bottom
-	svg
-		height: 70px
-		width: 12px
-		& *
-			transition: fill .3s
-	span
-		margin-right: 18px
-		color: #b2b6c2
-		font-family: 'Futura New'
-		font-size: 12px
-		font-weight: 300
-		letter-spacing: 1.05px
-		line-height: 1em
-		transition: color .3s, transform .3s
-
-// --------------------------------------------------
-// MAIN-NAVIGATION
-// --------------------------------------------------
-
-.mobile-navigation,
-.main-navigation
-	background: #fff
-	left: 0
-	padding: 0 40px
-	position: fixed
-	top: 0
-	width: 100%
-	transform: translateZ(0)
-	z-index: 11
-	.block-holder
-		margin-left: auto
-		margin-right: auto
-		position: relative
-		.logotype-holder
-			left: 0
-			position: absolute
-			top: 24px
-			width: 124px
-			transition: filter .3s
-			&:hover
-				filter: brightness(0.5)
-			a
-				display: block
-				width: 124px
-				margin: auto
-				img
-					display: block
-					width: 124px
-		.navigation-pannel
-			padding: 23px 0 19px
-			text-align: center
-			li
-				display: inline-block
-				margin: 0 10px
-				margin: 0 8px
-				position: relative
-				&.active
-					span
-						font-weight: 600
-						font-size: 22px
-					a
-						cursor: auto
-						font-weight: 600
-						color: transparent
-						svg
-							pointer-events: none
-							display: block
-							transform: translateZ(0)
-				&.active:after
-					background: #35363c
-					background-position: 50%
-					border-radius: 50%
-					bottom: -9px
-					content: ''
-					height: 5px
-					left: 50%
-					margin-left: -1px
-					position: absolute
-					width: 5px
-				a
-					padding: 4px 10px
-					color: #35363c
-					font-family: 'Futura New'
-					font-size: 18px
-					font-weight: 500
-					line-height: 1em
-					span
-						display: inline-block
-					svg
-						display: none
-						position: absolute
-						pointer-events: none
-						left: 15px
-						top: -4px
-						text
-							fill: url(#pattern)
-					span
-						transition: transform .3s
-					&:hover
-						span
-							transform: translate(0, -4px)
-							transition: transform .3s
-
-@media screen and (max-width: $medium)
-	.main-navigation
-		.block-holder
-			.logotype-holder
-				width: 126px
-				a
-					width: 126px
-					img
-						width: 126px
-
-	.controls-holder
-		a
-			font-size: 15px
-@media screen and (max-width: $tablet)
-	.main-navigation
+		font-weight: 600
+		text-transform: uppercase
+	.submenu
 		display: none
+	ul > li
+		display: inline-block
+		margin-right: 28px
+		white-space: nowrap
+		&.first
+			display: none
 
-// --------------------------------------------------
-// MOBILE-NAVIGATION
-// --------------------------------------------------
+// .wrap
 
-.mobile-navigation
-	display: none
-	padding: 0 30px
-	height: 54px
-	.block-holder
-		.gamburger
-			margin-top: 14px
-			float: left
-		.logotype-holder
-			position: absolute
-			top: 14px
-			text-align: center
-			left: 25%
-			width: 50%
-			img
-				width: 124px
-	.controls-holder
-		top: 12px
-		a
-			margin-left: 19px
-
-@media screen and (max-width: $medium)
-	.mobile-navigation
-		.block-holder
-			.logotype-holder
-				top: 19px
-				// width: 126px
-				a
-					width: 126px
-					img
-						width: 126px
-@media screen and (max-width: $tablet)
-	.mobile-navigation
-		display: block
-@media screen and (max-width: $mobile-large)
-	.mobile-navigation
-		padding: 0 20px
-@media screen and (max-width: $mobile-medium)
-	.mobile-navigation
-		padding: 0 16px
-@media screen and (max-width: $mobile-small)
-	.mobile-navigation
-		padding: 0 16px
-		.block-holder
-			.logotype-holder
-				left: 51px
-				width: 126px
-				a
-					width: 126px
-					img
-						width: 126px
-
-.cross-top-fixed.cross-navigation
-	margin-top: 55px
-	margin-right: 55px
-
-
-// --------------------------------------------------
-// MOBILE MENU
-// --------------------------------------------------
-
-#mobile-menu
-	.modal-content
-		border: 1px solid #cdd1dc
+.header
+	.logo.invisible
+		opacity: 0
+		height: 0
+		width: 0
+	.wrap
+		padding: 0 35px
+		display: table
+		width: 100%
+		& > *
+			display: table-cell
+			vertical-align: middle
+			white-space: nowrap
+			width: 1px
+	.logotype-holder
+		padding: 16px 0 9px
+	.bccall
 		text-align: center
-		position: fixed
-		left: 32px
-		right: 32px
-		top: 32px
-		bottom: 32px
-		height: auto
-		width: auto
-		.popup-navigation
-			ul
+		width: 100%
+		.phones-holder
+			color: #36393d
+			position: relative
+			font-size: 20px
+			font-weight: 400
+			line-height: 1em
+			// &:before
+			// 	background-image: url('../img/icons/phone-icon-1.svg')
+			// 	background-size: contain
+			// 	content: ''
+			// 	height: 29px
+			// 	left: -10px
+			// 	position: absolute
+			// 	position: absolute
+			// 	width: 12px
+			.fl
+				&:before
+					content: ''
+					height: 30px
+					width: 30px
+		.r-pimp.calll
+			color: #333
+			font-size: 12px
+			font-weight: 400
+			text-transform: uppercase
+			position: relative
+			&:before
+				content: ''
 				position: absolute
-				top: 50%
-				left: 50%
-				transform: translate(-50%, -50%)
-				li
-					padding: 0 20px
-					position: relative
-					&.active
-						a
-							color: transparent
-							cursor: auto
-							// pointer-events: none
-							font-weight: 600
-							svg
-								display: block
-					&.active:after
-						background: url('http://img-fotki.yandex.ru/get/5607/5091629.6b/0_612e6_b9039c0d_M.jpg')
-						background-position: 50%
-						border-radius: 50%
-						bottom: 7px
-						content: ''
-						height: 6px
-						left: 50%
-						margin-left: -3px
-						position: absolute
-						width: 6px
-					a
-						// padding: 4px 10px
-						color: #35363c
-						font-family: 'Futura New'
-						line-height: 1em
-						// padding: 0 20px
-						width: 73px
-						height: 22px
-						color: #35363c
-						font-size: 18px
-						font-weight: 500
-						line-height: 68px
-						span
-							display: inline-block
-						svg
-							display: none
-							left: 50%
-							pointer-events: none
-							position: absolute
-							top: 22px
-							transform: translateX(-50%)
-							width: 52px
-							text
-								fill: url(#pattern)
-@media screen and (max-height: 500px)
-	#mobile-menu
-		.modal-content
-			position: static
-			outline: none
-			border: none
-			.popup-navigation
-				ul
-					position: static
-					transform: none
+				bottom: 0
+				left: 0
+				height: 1px
+				border-bottom: 0.25px dashed black
+				width: 100%
+	.phones
