--- a/src/main.jade
+++ b/src/main.jade
@@ -266,6 +266,20 @@ html(lang='en')
 							.caroufredsel_wrapper
 								.carousel
 									.item
+										img(src="/img/content/user-1.png", alt="test")
+										h1
+											div
+												font(color='#ff0000') СКИДКА 5%
+												|  при заказе комплекса услуг!
+										h2
+											| При заказе комплекса услуг по легализации нерезидента  
+											div
+												| (Разрешение на работу+Вид на жительство) - мы подарим Вам 
+												font(color='#ff0000')
+													b 5% скидку!
+										.more
+											a.btn.btn-custom.btn-large(href='http://justicon.ua/aktsii-i-predlozheniya/skidka-na-kompleks-razreshenie-na-rabotu-vid-na-zhitelstvo.html?clear_cache=Y') Подробнее
+									.item
 										h1
 											font(size='4') Минус
 											span(style='text-align: justify;')
@@ -312,13 +326,7 @@ html(lang='en')
 								.outer-center
 									.inner-center
 										.l-trng.fl
-										.pagination.fl(style='display: block;')
-											a(href='#')
-												span 1
-											a.selected(href='#')
-												span 2
-											a(href='#')
-												span 3
+										.pagination.fl
 										.r-trng.fl
 								.clear
 						.rnb(style='display: block;')
@@ -327,187 +335,172 @@ html(lang='en')
 			.mservices
 				.wrap
 					.fl1
-						#bx_651765591_41.item
+						.item
+							.adc.pract
+								.s1.adc
+								.text
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/korp/') Корпоративные правоотношения
+										div
+											font(color='#ff0000')
+												b - 
+											a(href='http://justicon.ua/uslugi/korp/registratsiya/', target='_self') Регистрация
+										div
+											b
+												font(color='#ff0000') - 
+											a(href='http://justicon.ua/uslugi/korp/izmeneniya/', target='_self') Изменения
+										div
+											font(color='#ff0000')
+												b - 
+											a(href='http://justicon.ua/uslugi/korp/likvidatsiya/', target='_self') Ликвидация
+										div
+											b
+												font(color='#ff0000') - 
+											a(href='http://justicon.ua/uslugi/korp/soputstv/', target='_self') Сопутствующие и
+										div
+											a(href='http://justicon.ua/uslugi/korp/soputstv/', target='_self') дополнительные
+										div
+											a(href='http://justicon.ua/uslugi/korp/soputstv/', target='_self') услуги
+										div
+											span(style='background-color: rgb(0, 191, 243);')
 							.title
 								a(href='http://justicon.ua/uslugi/korp/') Корпоративные правоотношения
-							.adc.pract
-								.s1.adc(style='display: block;')
-								.text
-									div
-										font(color='#ff0000')
-											b
-												br
-									div
-										font(color='#ff0000')
-											b - 
-										a(href='http://justicon.ua/uslugi/korp/registratsiya/', target='_self') Регистрация
-									div
-										b
-											font(color='#ff0000') - 
-										a(href='http://justicon.ua/uslugi/korp/izmeneniya/', target='_self') Изменения
-									div
-										font(color='#ff0000')
-											b - 
-										a(href='http://justicon.ua/uslugi/korp/likvidatsiya/', target='_self') Ликвидация
-									div
-										b
-											font(color='#ff0000') - 
-										a(href='http://justicon.ua/uslugi/korp/soputstv/', target='_self') Сопутствующие и
-									div
-										a(href='http://justicon.ua/uslugi/korp/soputstv/', target='_self') дополнительные
-									div
-										a(href='http://justicon.ua/uslugi/korp/soputstv/', target='_self') услуги
-									div
-										span(style='background-color: rgb(0, 191, 243);')
-											br
-						#bx_651765591_42.item
-							.title
-								a(href='http://justicon.ua/uslugi/lits/') Лицензии, разрешения, сертификация
+						.item
 							.adc.pract
 								.s2.adc
 								.text
-									div
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/lits/') Лицензии, разрешения, сертификация
+										font(color='#ff0000')  - 
+										a(href='http://justicon.ua/uslugi/lits/litsenzii/', target='_self') Лицензии 
 										br
-									div
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/lits/razresheniya/', target='_self') Разрешения
 										br
-									font(color='#ff0000')  - 
-									a(href='http://justicon.ua/uslugi/lits/litsenzii/', target='_self') Лицензии 
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/lits/razresheniya/', target='_self') Разрешения
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/lits/sertifikatsiya/', target='_self') Сертификация
-						#bx_651765591_43.item
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/lits/sertifikatsiya/', target='_self') Сертификация
 							.title
-								a(href='http://justicon.ua/uslugi/sud/') Судебная практика
+								a(href='http://justicon.ua/uslugi/lits/') Лицензии, разрешения, сертификация
+						.item
 							.adc.pract
 								.s3.adc
 								.text
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/sud/predst/', target='_self') Представительство интересов в судах
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/sud/predstavitelstvo-v-ispolnitelnom-proizvodstve.html', target='_self') Представительство в исполнительном производстве 
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/sud/vozvrat-dolgov.html', target='_self') Возврат долгов
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/sud/praktiki/', target='_self') Судебные практики
-						#bx_651765591_44.item
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/sud/') Судебная практика
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/sud/predst/', target='_self') Представительство интересов в судах
+										br
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/sud/predstavitelstvo-v-ispolnitelnom-proizvodstve.html', target='_self') Представительство в исполнительном производстве 
+										br
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/sud/vozvrat-dolgov.html', target='_self') Возврат долгов
+										br
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/sud/praktiki/', target='_self') Судебные практики
 							.title
-								a(href='http://justicon.ua/uslugi/zem/') Недвижимость, строительство, земельное право
+								a(href='http://justicon.ua/uslugi/sud/') Судебная практика
+						.item
 							.adc.pract
 								.s4.adc
 								.text
-									div
-										font(color='#ff0000')
-											br
-									div
-										font(color='#ff0000')
-											br
-									div
-										font(color='#ff0000')
-											br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/zem/nedv/', target='_self') Недвижимость
-									| , 
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/zem/stroi/', target='_self') Строительство
-									br
-									font(color='#ff0000') - 
-									a(href='http://justicon.ua/uslugi/zem/zem-pr/', target='_self') Земельное право
-						#bx_651765591_45.item
-							.title
-								a(href='http://justicon.ua/uslugi/migr/') Миграционное право
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/zem/') Недвижимость, строительство, земельное право
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/zem/nedv/', target='_self') Недвижимость
+										| , 
+										br
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/zem/stroi/', target='_self') Строительство
+										br
+										font(color='#ff0000') - 
+										a(href='http://justicon.ua/uslugi/zem/zem-pr/', target='_self') Земельное право
+								.title
+									a(href='http://justicon.ua/uslugi/zem/') Недвижимость, строительство, земельное право
+						.item
 							.adc.pract
 								.s5.adc
 								.text
-									div
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/migr/') Миграционное право
+										font(color='#ff0000')  - 
+										a(href='http://justicon.ua/uslugi/migr/immigr/', target='_self') Иммиграция в Украину
 										br
-									font(color='#ff0000')  - 
-									a(href='http://justicon.ua/uslugi/migr/immigr/', target='_self') Иммиграция в Украину
-									br
-									span(style='color: rgb(255, 0, 0);') - 
-									a(href='http://justicon.ua/uslugi/migr/emigr/', target='_self') Эмиграция из Украины
-									br
-									span(style='color: rgb(255, 0, 0);') - 
-									a(href='http://justicon.ua/uslugi/migr/soputstv-uslugi/', target='_self') Сопутствующие услуги
-						#bx_651765591_46.item
+										span(style='color: rgb(255, 0, 0);') - 
+										a(href='http://justicon.ua/uslugi/migr/emigr/', target='_self') Эмиграция из Украины
+										br
+										span(style='color: rgb(255, 0, 0);') - 
+										a(href='http://justicon.ua/uslugi/migr/soputstv-uslugi/', target='_self') Сопутствующие услуги
 							.title
-								a(href='http://justicon.ua/uslugi/int/') Интеллектуальное право
+								a(href='http://justicon.ua/uslugi/migr/') Миграционное право
+						.item
 							.adc.pract
 								.s6.adc
 								.text
-									div(style='text-align: center;')
-										div(style='text-align: justify;')
-											font(color='#ff0000')
-												br
-										div(style='text-align: justify;')
-											font(color='#ff0000') - 
-											a(href='http://justicon.ua/uslugi/int/reg/', target='_self') Регистрация торговых марок
-										div(style='text-align: left;')
-											span(style='color: rgb(255, 0, 0); text-align: justify;') - 
-											a(href='http://justicon.ua/uslugi/int/patent/', target='_self') Патентование
-										div(style='text-align: left;')
-											span(style='color: rgb(255, 0, 0); text-align: justify;') - 
-											a(href='http://justicon.ua/uslugi/int/avtor/', target='_self') Авторское право
-										ul  
-										div(style='text-align: left;')
-											font(color='#0054a5')
-												b  
-										div(style='text-align: left;')
-											font(color='#0054a5')
-												b  
-									div(style='text-align: center;')
-										font(color='#0054a5')
-											b  
-									div(style='text-align: center;')
-										font(color='#0054a5')
-											b  
-						#bx_651765591_47.item
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/int/') Интеллектуальное право
+										div(style='text-align: center;')
+											div
+												font(color='#ff0000') - 
+												a(href='http://justicon.ua/uslugi/int/reg/', target='_self') Регистрация торговых марок
+											div
+												span(style='color: rgb(255, 0, 0); text-align: justify;') - 
+												a(href='http://justicon.ua/uslugi/int/patent/', target='_self') Патентование
+											div
+												span(style='color: rgb(255, 0, 0); text-align: justify;') - 
+												a(href='http://justicon.ua/uslugi/int/avtor/', target='_self') Авторское право
 							.title
-								a(href='http://justicon.ua/uslugi/abon/') Абонентское                         обслуживание
+								a(href='http://justicon.ua/uslugi/int/') Интеллектуальное право
+						.item
 							.adc.pract
 								.s7.adc
 								.text
-									font(color='#FF0000') - 
-									a(href='http://justicon.ua/uslugi/abon/a-y/abonentskoe-yuridicheskoe-obsluzhivanie.html', target='_self') Абонентское обслуживание
-									br
-									font(color='#FF0000') - 
-									a(href='http://justicon.ua/uslugi/abon/b-u/bukhgalterskie-uslugi-autsorsing.html', target='_self') Бухгалтерские услуги. Аутсорсинг
-									br
-									font(color='#FF0000') - 
-									a(href='http://justicon.ua/uslugi/abon/d-b/dopolnitelnye-bukhgalterskie-uslugi.html', target='_self') Дополнительные бухгалтерские услуги
-									br
-									font(color='#FF0000')
-										| - 
-										a(href='http://justicon.ua/uslugi/abon/k-s/kadrovoe-soprovozhdenie.html', target='_self') Кадровое сопровождение
-									br
-						#bx_651765591_48.item
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/abon/') Абонентское обслуживание
+										font(color='#FF0000') - 
+										a(href='http://justicon.ua/uslugi/abon/a-y/abonentskoe-yuridicheskoe-obsluzhivanie.html', target='_self') Абонентское обслуживание
+										br
+										font(color='#FF0000') - 
+										a(href='http://justicon.ua/uslugi/abon/b-u/bukhgalterskie-uslugi-autsorsing.html', target='_self') Бухгалтерские услуги. Аутсорсинг
+										br
+										font(color='#FF0000') - 
+										a(href='http://justicon.ua/uslugi/abon/d-b/dopolnitelnye-bukhgalterskie-uslugi.html', target='_self') Дополнительные бухгалтерские услуги
+										br
+										font(color='#FF0000')
+											| - 
+											a(href='http://justicon.ua/uslugi/abon/k-s/kadrovoe-soprovozhdenie.html', target='_self') Кадровое сопровождение
 							.title
-								a(href='http://justicon.ua/uslugi/konsalting/') Юридический и налоговый консалтинг
+								a(href='http://justicon.ua/uslugi/abon/') Абонентское обслуживание
+						.item
 							.adc.pract
 								.s8.adc
 								.text
-									div
+									.text-wrap
+										.title-hover
+											a(href='http://justicon.ua/uslugi/konsalting/') Юридический и налоговый консалтинг
+										a(href='http://justicon.ua/uslugi/konsalting/nalog/', target='_self') Налоговый консалтинг
+										br
 										font(color='#FF0000')
-											b
-												br
-									font(color='#FF0000')
-										b -
-									a(href='http://justicon.ua/uslugi/konsalting/nalog/', target='_self') Налоговый консалтинг
-									br
-									font(color='#FF0000')
-										b -
-									a(href='http://justicon.ua/uslugi/konsalting/yur/', target='_self') Юридический консалтинг
-									br
-									font(color='#FF0000')
-										b -
-									a(href='http://justicon.ua/uslugi/konsalting/antimonopolnoe-pravo/', target='_self') Антимонопольное право
+											b -
+										a(href='http://justicon.ua/uslugi/konsalting/yur/', target='_self') Юридический консалтинг
+										a(href='http://justicon.ua/uslugi/konsalting/antimonopolnoe-pravo/', target='_self') Антимонопольное право
+							.title
+								a(href='http://justicon.ua/uslugi/konsalting/') Юридический и налоговый консалтинг
 					.clear
+			.search-section
+				.wrap
+					form(action="#").search-wrapper
+						h1 Некогда разбираться? Мы поможем.
+						.input-form
+							input(type="text" placeholder="Введите основные ключевые слова вашего вопроса")
+						button(type="submit") Найти решение
 			.partners
 				.wrap
 					.parnters-holder
