--- a/src/partials/head.jade
+++ b/src/partials/head.jade
@@ -43,3 +43,5 @@ link(rel='stylesheet', href='vendor/normalize-css/normalize.css')
 link(rel='stylesheet', href='vendor/font-awesome/css/font-awesome.min.css')
 link(rel='stylesheet', href='vendor/animate.css/animate.css')
 link(rel='stylesheet', href='css/concated.css')
+noscript
+	link(rel='stylesheet', href='css/noscript.css')
